--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
            data-title="DreamLogue"
            data-tags="GenAI,Interface Tangible,Creative Tech,Innovation"
            data-desc="Expérience interactive d'interprétation des rêves via IA générative."
-           data-full-desc="DreamLogue est une installation interactive qui matérialise l'immatériel. L'utilisateur raconte son rêve, qui est analysé et interprété par une IA générative pour créer une représentation visuelle et narrative unique. La navigation dans ce 'paysage onirique' se fait via une interface physique tangible conçue sur mesure."
+           data-full-desc="DreamLogue est une installation interactive permettant de transformer les rêves en un outil de compréhension de soi. À partir d’un récit manuscrit, une IA générative analyse et interprète le rêve pour créer une visualisation unique affichée sur un miroir. Je développe actuellement la reconnaissance de l’écriture manuscrite en temps réel."
            data-docs="assets/DreamLogue Défense.pdf"
            data-image="assets/Image Dreamlogue.png">
         <div class="h-48 bg-purple-50 relative border-b border-gray-100 overflow-hidden">
@@ -454,6 +454,8 @@
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">GenAI</span>
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Tangible</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Creative Tech</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Innovation</span>
           </div>
         </div>
       </div>
@@ -463,17 +465,18 @@
            data-title="Campagne Kickstarter Orika"
            data-tags="Crowdfunding,Design Produit,Marketing,Logistique"
            data-desc="Lancement d'un portefeuille origami en cuir français."
-           data-full-desc="Gestion de projet complète pour le lancement d'un produit : de la conception d'un portefeuille minimaliste en cuir plié (origami) à la campagne marketing sur Kickstarter. Réussite de la collecte, gestion de la production et de la logistique d'expédition aux contributeurs."
+           data-full-desc="Gestion de projet complète pour le lancement d'un produit : de la conception d'un portefeuille minimaliste en cuir plié (origami) à la campagne marketing sur Kickstarter. La campagne sera lancée en Avril 2026 et nous gèrerons entièrement la production et la logistique d'expédition aux contributeurs."
            data-image="assets/Image Kickstarter.png">
         <div class="h-48 bg-orange-50 relative border-b border-gray-100 overflow-hidden">
           <img src="assets/Image Kickstarter.png" alt="Leather Wallet" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Campagne Kickstarter Orika</h3>
-          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Lancement d'un portefeuille origami en cuir français.</p>
+          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Gestion de projet complète pour le lancement d'un produit : un portefeuille origami en cuir français.</p>
           <div class="flex flex-wrap gap-2">
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Crowdfunding</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Design Produit</span>
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Marketing</span>
-            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Produit</span>
           </div>
         </div>
       </div>
@@ -481,9 +484,9 @@
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="data"
            data-title="Prediction des prix Airbnb"
-           data-tags="Python,Pandas,Scikit-Learn,Data Viz"
+           data-tags="Data,Python,Pandas, Seaborn, Matplotlib,Scikit-Learn"
            data-desc="Modèle prédictif pour l'estimation des prix de location."
-           data-full-desc="Projet complet de Data Science : nettoyage d'un jeu de données brut Airbnb, analyse exploratoire (EDA) pour identifier les corrélations, et entraînement de modèles de Machine Learning (Random Forest, XGBoost) pour prédire le prix optimal d'une nuitée selon les caractéristiques du logement."
+           data-full-desc="Projet complet de Data Science : nettoyage d'un jeu de données brut Airbnb, analyse exploratoire (EDA) pour identifier les corrélations, traitement des données et entraînement de modèles de Machine Learning (Random Forest, XGBoost) pour prédire le prix optimal d'une nuitée selon les caractéristiques du logement."
            data-docs="assets/Projet_ADD_Clara_FADDA_Lucas_STALTER-3.ipynb"
            data-image="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=800&q=80">
         <div class="h-48 bg-red-50 relative border-b border-gray-100 overflow-hidden">
@@ -491,10 +494,13 @@
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Prediction des prix Airbnb</h3>
-          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Modèle prédictif pour l'estimation des prix de location.</p>
+          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Modèle prédictif entraîné sur une base de données pour l'estimation des prix de location.</p>
           <div class="flex flex-wrap gap-2">
-            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Python</span>
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Data</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Python</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Pandas</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Seaborn</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Scikit-Learn</span>
           </div>
         </div>
       </div>
@@ -774,7 +780,7 @@ document.addEventListener('DOMContentLoaded', () => {
           </div>
 
           <div>
-            <p class="font-bold text-marine mb-2 text-xs uppercase tracking-wide">IA & Machine Learning</p>
+            <p class="font-bold text-marine mb-2 text-xs uppercase tracking-wide">Data/IA & Machine Learning</p>
             <div class="flex flex-wrap gap-2">
               <span class="px-3 py-1 bg-poudre/30 text-marine rounded-full text-xs font-medium">LLM Multi-agents</span>
               <span class="px-3 py-1 bg-poudre/30 text-marine rounded-full text-xs font-medium">NLP</span>
@@ -864,7 +870,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <div>
             <p class="font-bold text-marine mb-2 text-xs uppercase tracking-wide">Outils</p>
             <div class="flex flex-wrap gap-2">
-              <span class="px-3 py-1 bg-poudre/30 text-marine rounded-full text-xs font-medium">Git / GitHub</span>
+              <span class="px-3 py-1 bg-poudre/30 text-marine rounded-full text-xs font-medium">Git / GitHub / GitHub pages</span>
               <span class="px-3 py-1 bg-poudre/30 text-marine rounded-full text-xs font-medium">VS Code</span>
               <span class="px-3 py-1 bg-poudre/30 text-marine rounded-full text-xs font-medium">Pycharm</span>
               <span class="px-3 py-1 bg-poudre/30 text-marine rounded-full text-xs font-medium">Office 365</span>
