--- a/index.html
+++ b/index.html
@@ -508,19 +508,22 @@
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="data"
            data-title="Logistique TransConnect"
-           data-tags="C#,SQL,Algorithmes,Graphes"
+           data-tags="C#,SQL,POO,Algorithmes,Graphes"
            data-desc="Logiciel d'optimisation de trajets de livraison."
-           data-full-desc="Développement d'une application desktop en C# pour une entreprise de logistique. Le cœur du projet réside dans l'utilisation de la théorie des graphes (Algorithmes de Dijkstra et Floyd-Warshall) pour calculer les itinéraires les plus courts et optimiser la flotte de camions."
+           data-full-desc="Développement d'une application desktop en C# pour une entreprise de logistique. Le cœur du projet réside dans l'utilisation de la théorie des graphes (Algorithmes de Dijkstra et Floyd-Warshall) pour calculer les itinéraires les plus courts et optimiser la flotte de camions et de chauffeurs. Utilisation de la POO pour répartir les chauffeur et les différents types de camions. Création d'une base de données pour référencer les clients, commandes et livraisons."
            data-image="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=800&q=80">
         <div class="h-48 bg-blue-50 relative border-b border-gray-100 overflow-hidden">
           <img src="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=800&q=80" alt="Logistics" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Logistique TransConnect</h3>
-          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Logiciel d'optimisation de trajets de livraison via graphes.</p>
+          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Logiciel d'optimisation de logistique de livraison. Utilisation des graphes pour l'optimisation des trajets.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">C#</span>
-            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Algo</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">SQL</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">POO</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Algorithmes</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Graphes</span>
           </div>
         </div>
       </div>
@@ -528,19 +531,20 @@
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="data"
            data-title="Gestion BDD - Magasin Vélo"
-           data-tags="SQL,C# / .NET,Base de données,Gestion"
+           data-tags="SQL,C#,Base de données"
            data-desc="Architecture SQL et application de gestion commerciale."
-           data-full-desc="Conception du schéma relationnel (MCD/MLD) pour un magasin de sport. Développement d'une interface client lourd en C# permettant la gestion des stocks en temps réel, le suivi des commandes clients et l'analyse du chiffre d'affaires via des requêtes SQL complexes."
+           data-full-desc="Conception du schéma relationnel pour un magasin de sport fictif. Développement d'une interface manager en C# permettant la gestion des stocks en temps réel, le suivi des commandes clients et l'analyse du chiffre d'affaires via des requêtes SQL."
            data-image="https://images.unsplash.com/photo-1485965120184-e220f721d03e?w=800&q=80">
         <div class="h-48 bg-teal-50 relative border-b border-gray-100 overflow-hidden">
           <img src="https://images.unsplash.com/photo-1485965120184-e220f721d03e?w=800&q=80" alt="Database" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Gestion BDD - Magasin Vélo</h3>
-          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Architecture SQL et application de gestion commerciale.</p>
+          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Architecture SQL et application C# de gestion commerciale pour un magasin fictif.</p>
           <div class="flex flex-wrap gap-2">
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">C#</span>
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">SQL</span>
-            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">.NET</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Base de Données</span>
           </div>
         </div>
       </div>
@@ -548,9 +552,9 @@
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="product"
            data-title="Design & Conception"
-           data-tags="Électronique,Arduino,Soudure,Impression 3D"
+           data-tags="Design,Électronique, Hardware,Arduino,Soudure,3D"
            data-desc="Série de projets hardware et DIY."
-           data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : assemblage et soudure d'une console Gameboy, modification d'un signal vidéo (VGAX) via électronique, et conception d'une flûte de pan imprimée en 3D et accordée."
+           data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : assemblage et soudure d'une console Gameboy, modification d'un signal vidéo (VGAX) via électronique, et conception d'une flûte de pan designée et imprimée en 3D."
            data-docs='[{"url":"https://oil-giraffe-c54.notion.site/Documentation-HMAA-2nd-workshop-294bf791352280d5ad24d0cfab967bf9","label":"Documentation Modélisation & Impression 3D"},{"url":"https://bow-chalk-0b1.notion.site/HMAA-Week-3-Process-images-2dfcb55dd23580b585add97a6f65caca","label":"Documentation PCB & VGAx"}]'
            data-image="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80">
         <div class="h-48 bg-green-50 relative border-b border-gray-100 overflow-hidden">
@@ -558,10 +562,13 @@
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Design & Conception</h3>
-          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Série de projets hardware : Gameboy, VGAX, Impression 3D.</p>
+          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Série de projets hardware : Gameboy, VGAX, Design & Impression 3D.</p>
           <div class="flex flex-wrap gap-2">
-            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">DIY</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Électronique</span>
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Hardware</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Arduino</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Soudure</span>
+            <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">3D</span>
           </div>
         </div>
       </div>
