--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
            data-github="https://github.com/Clarafadda/Ray_Marching_Editor"
            data-demo="https://clarafadda.github.io/Ray_Marching_Editor/"
            data-desc="Moteur de rendu et éditeur interactif basé sur le Raymarching."
-           data-full-desc="Ce projet est un éditeur de scène 3D interactif basé sur WebGPU, utilisant le ray marching et des fonctions de distance signée (SDF) pour le rendu procédural en temps réel. Il permet la création de scènes à partir de primitives 3D et la modification simultanée du code shader WGSL."
+           data-full-desc="Ce projet est un éditeur de scène 3D interactif basé sur WebGPU, utilisant le ray marching et des fonctions de distance signée (SDF) pour le rendu procédural en temps réel. Il permet la création de scènes à partir de primitives 3D (comme des sphères, des boîtes, etc.) et la modification simultanée du code shader WGSL."
            data-image="assets/Image Raymarching.png">
         <div class="h-48 bg-gray-800 relative border-b border-gray-100 overflow-hidden">
           <img src="assets/Image Raymarching.png" alt="3D Graphics" class="project-image group-hover:scale-110 transition-transform duration-500">
@@ -450,7 +450,7 @@
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">DreamLogue</h3>
-          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Expérience interactive d'interprétation des rêves via IA générative.</p>
+          <p class="text-gray-600 text-sm mb-4 line-clamp-2">Expérience interactive d'interprétation des rêves via une IA générative.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">GenAI</span>
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Tangible</span>
@@ -462,7 +462,7 @@
 
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="product"
-           data-title="Campagne Kickstarter Orika"
+           data-title="Campagne Kickstarter"
            data-tags="Crowdfunding,Design Produit,Marketing,Logistique"
            data-desc="Lancement d'un portefeuille origami en cuir français."
            data-full-desc="Gestion de projet complète pour le lancement d'un produit : de la conception d'un portefeuille minimaliste en cuir plié (origami) à la campagne marketing sur Kickstarter. La campagne sera lancée en Avril 2026 et nous gèrerons entièrement la production et la logistique d'expédition aux contributeurs."
@@ -471,7 +471,7 @@
           <img src="assets/Image Kickstarter.png" alt="Leather Wallet" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">Campagne Kickstarter Orika</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Campagne Kickstarter</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Gestion de projet complète pour le lancement d'un produit : un portefeuille origami en cuir français.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Crowdfunding</span>
@@ -486,7 +486,7 @@
            data-title="Prediction des prix Airbnb"
            data-tags="Data,Python,Pandas, Seaborn, Matplotlib,Scikit-Learn"
            data-desc="Modèle prédictif pour l'estimation des prix de location."
-           data-full-desc="Projet complet de Data Science : nettoyage d'un jeu de données brut Airbnb, analyse exploratoire (EDA) pour identifier les corrélations, traitement des données et entraînement de modèles de Machine Learning (Random Forest, XGBoost) pour prédire le prix optimal d'une nuitée selon les caractéristiques du logement."
+           data-full-desc="Projet complet de Data Science : nettoyage d'un jeu de données brut Airbnb, analyse exploratoire pour identifier les corrélations, traitement des données et entraînement de modèles de Machine Learning (Random Forest, XGBoost) pour prédire le prix optimal d'une nuit selon les caractéristiques du logement."
            data-docs="assets/Projet_ADD_Clara_FADDA_Lucas_STALTER-3.ipynb"
            data-image="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=800&q=80">
         <div class="h-48 bg-red-50 relative border-b border-gray-100 overflow-hidden">
@@ -510,7 +510,7 @@
            data-title="Logistique TransConnect"
            data-tags="C#,SQL,POO,Algorithmes,Graphes"
            data-desc="Logiciel d'optimisation de trajets de livraison."
-           data-full-desc="Développement d'une application desktop en C# pour une entreprise de logistique. Le cœur du projet réside dans l'utilisation de la théorie des graphes (Algorithmes de Dijkstra et Floyd-Warshall) pour calculer les itinéraires les plus courts et optimiser la flotte de camions et de chauffeurs. Utilisation de la POO pour répartir les chauffeur et les différents types de camions. Création d'une base de données pour référencer les clients, commandes et livraisons."
+           data-full-desc="Développement d'une application desktop en C# pour une entreprise de logistique fictive. Le cœur du projet réside dans l'utilisation de la théorie des graphes (Algorithmes de Dijkstra et Floyd-Warshall) pour calculer les itinéraires les plus courts et optimiser la flotte de camions et de chauffeurs. Utilisation de la POO pour répartir les chauffeur et les différents types de camions. Création d'une base de données pour référencer les clients, commandes et livraisons."
            data-image="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=800&q=80">
         <div class="h-48 bg-blue-50 relative border-b border-gray-100 overflow-hidden">
           <img src="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=800&q=80" alt="Logistics" class="project-image group-hover:scale-110 transition-transform duration-500">
@@ -554,7 +554,7 @@
            data-title="Design & Conception"
            data-tags="Design,Électronique, Hardware,Arduino,Soudure,3D"
            data-desc="Série de projets hardware et DIY."
-           data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : assemblage et soudure d'une console Gameboy, modification d'un signal vidéo (VGAX) via électronique, et conception d'une flûte de pan designée et imprimée en 3D."
+           data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : assemblage et soudure d'une console Gameboy, conception d'une flûte de pan designée et imprimée en 3D, et modification d'un signal vidéo (VGAX) via électronique."
            data-docs='[{"url":"https://oil-giraffe-c54.notion.site/Documentation-HMAA-2nd-workshop-294bf791352280d5ad24d0cfab967bf9","label":"Documentation Modélisation & Impression 3D"},{"url":"https://bow-chalk-0b1.notion.site/HMAA-Week-3-Process-images-2dfcb55dd23580b585add97a6f65caca","label":"Documentation PCB & VGAx"}]'
            data-image="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80">
         <div class="h-48 bg-green-50 relative border-b border-gray-100 overflow-hidden">
