--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
            data-full-desc="Développement d'une architecture complexe utilisant plusieurs agents autonomes (LLM) conçu pour l'analyse automatisée de la littérature et des documents. Cette application utilise la génération augmentée par la récupération (RAG) pour fournir des réponses basées exclusivement sur les documents PDF téléchargés."
            data-image="assets/Image Agent LLM.png">
         <div class="h-48 bg-purple-50 relative border-b border-gray-100 overflow-hidden">
-          <img src="assets/Image Agent LLM.png" alt="AI Agents" class="project-image group-hover:scale-110 transition-transform duration-500">
+          <img src="assets/Image Agent LLM.png" alt="AI Agents" class="project-image w-full h-full object-cover">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Rédacteur Multi-Agents LLM</h3>
@@ -398,7 +398,7 @@
            data-full-desc="Ce projet permet la reconnaissance en temps réel de chiffres manuscrits à l'aide de TinyGrad, un framework de deep learning (DL), et le déploie sous forme d'application web basée sur WebGPU. Tinygrad est entraîné avec un réseau de neurone MLP et CNN sur l'ensemble de données MNIST. Une étude des hyperparamètres a été réalisée pour déterminer les plus performants."
            data-image="assets/Image Classifier.png">
         <div class="h-48 bg-gray-900 relative border-b border-gray-100 overflow-hidden">
-          <img src="assets/Image Classifier.png" alt="MNIST Digits" class="project-image group-hover:scale-110 transition-transform duration-500">
+          <img src="assets/Image Classifier.png" alt="MNIST Digits" class="project-image w-full h-full object-cover">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Classification de chiffres - DL</h3>
@@ -423,7 +423,7 @@
            data-full-desc="Ce projet est un éditeur de scène 3D interactif basé sur WebGPU, utilisant le ray marching et des fonctions de distance signée (SDF) pour le rendu procédural en temps réel. Il permet la création de scènes à partir de primitives 3D (comme des sphères, des boîtes, etc.) et la modification simultanée du code shader WGSL."
            data-image="assets/Image Raymarching.png">
         <div class="h-48 bg-gray-800 relative border-b border-gray-100 overflow-hidden">
-          <img src="assets/Image Raymarching.png" alt="3D Graphics" class="project-image group-hover:scale-110 transition-transform duration-500">
+          <img src="assets/Image Raymarching.png" alt="3D Graphics" class="project-image w-full h-full object-cover">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Éditeur de Scènes 3D</h3>
@@ -490,7 +490,7 @@
            data-docs="assets/Projet_ADD_Clara_FADDA_Lucas_STALTER-3.ipynb"
            data-image="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=800&q=80">
         <div class="h-48 bg-red-50 relative border-b border-gray-100 overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=800&q=80" alt="Data Analysis" class="project-image group-hover:scale-110 transition-transform duration-500">
+          <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=800&q=80" alt="Data Analysis" class="project-image w-full h-full object-cover">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Prediction des prix Airbnb</h3>
@@ -511,9 +511,9 @@
            data-tags="C#,SQL,POO,Algorithmes,Graphes"
            data-desc="Logiciel d'optimisation de trajets de livraison."
            data-full-desc="Développement d'une application desktop en C# pour une entreprise de logistique fictive. Le cœur du projet réside dans l'utilisation de la théorie des graphes (Algorithmes de Dijkstra et Floyd-Warshall) pour calculer les itinéraires les plus courts et optimiser la flotte de camions et de chauffeurs. Utilisation de la POO pour répartir les chauffeur et les différents types de camions. Création d'une base de données pour référencer les clients, commandes et livraisons."
-           data-image="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=800&q=80">
+           data-image="assets/Image transconnect.jpg">
         <div class="h-48 bg-blue-50 relative border-b border-gray-100 overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=800&q=80" alt="Logistics" class="project-image group-hover:scale-110 transition-transform duration-500">
+          <img src="assets/Image transconnect.jpg" alt="Logistics" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Logistique TransConnect</h3>
@@ -536,7 +536,7 @@
            data-full-desc="Conception du schéma relationnel pour un magasin de sport fictif. Développement d'une interface manager en C# permettant la gestion des stocks en temps réel, le suivi des commandes clients et l'analyse du chiffre d'affaires via des requêtes SQL."
            data-image="https://images.unsplash.com/photo-1485965120184-e220f721d03e?w=800&q=80">
         <div class="h-48 bg-teal-50 relative border-b border-gray-100 overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1485965120184-e220f721d03e?w=800&q=80" alt="Database" class="project-image group-hover:scale-110 transition-transform duration-500">
+          <img src="https://images.unsplash.com/photo-1485965120184-e220f721d03e?w=800&q=80" alt="Database" class="project-image w-full h-full object-cover">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Gestion BDD - Magasin Vélo</h3>
@@ -558,7 +558,7 @@
            data-docs='[{"url":"https://oil-giraffe-c54.notion.site/Documentation-HMAA-2nd-workshop-294bf791352280d5ad24d0cfab967bf9","label":"Documentation Modélisation & Impression 3D"},{"url":"https://bow-chalk-0b1.notion.site/HMAA-Week-3-Process-images-2dfcb55dd23580b585add97a6f65caca","label":"Documentation PCB & VGAx"}]'
            data-image="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80">
         <div class="h-48 bg-green-50 relative border-b border-gray-100 overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="DIY Electronics" class="project-image group-hover:scale-110 transition-transform duration-500">
+          <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="DIY Electronics" class="project-image w-full h-full object-cover">
         </div>
         <div class="p-6">
           <h3 class="text-xl font-bold mb-2 text-marine">Design & Conception</h3>
@@ -581,16 +581,17 @@
 <div id="project-modal" class="fixed inset-0 z-[100] hidden flex items-center justify-center px-4">
   <div class="absolute inset-0 bg-marine/80 backdrop-blur-sm transition-opacity" id="modal-overlay"></div>
   
-  <div class="relative bg-white w-full max-w-6xl max-h-[95vh] rounded-3xl overflow-hidden shadow-2xl transform transition-all scale-95 opacity-0 duration-300" id="modal-content">
-    
+  <div class="relative bg-white w-full max-w-6xl max-h-[95vh] rounded-3xl overflow-y-auto shadow-2xl transform transition-all">
+
     <button id="close-modal" class="absolute top-6 right-6 z-20 p-3 bg-white/90 hover:bg-poudre rounded-full text-marine transition-colors shadow-lg">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
     </button>
 
-    <div class="grid md:grid-cols-5 h-full">
+    <div class="flex flex-col md:grid md:grid-cols-5">
       <!-- Image (2/5 de largeur) -->
-      <div id="modal-visual" class="md:col-span-2 h-64 md:h-auto overflow-hidden bg-gray-100">
+      <div id="modal-visual" class="md:col-span-2 h-64 md:h-auto flex items-center justify-center bg-gray-100">
       </div>
+
 
       <!-- Contenu (3/5 de largeur) -->
       <div class="md:col-span-3 p-8 md:p-12 overflow-y-auto">
@@ -667,7 +668,8 @@ document.addEventListener('DOMContentLoaded', () => {
     mDesc.textContent = fullDesc;
     
     // Visuel
-    mVisual.innerHTML = `<img src="${image}" alt="${title}" class="w-full h-full object-cover">`;
+    mVisual.innerHTML = `<img src="${image}" alt="${title}" class="max-w-full max-h-full object-contain">`;
+
 
     // Tags
     mTags.innerHTML = tags.map(tag => 
